[gd_scene load_steps=40 format=2]

[ext_resource path="res://entity/fx/health_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/entity/ghost/ghost attack.png" type="Texture" id=2]
[ext_resource path="res://entity/ghost.gd" type="Script" id=3]
[ext_resource path="res://assets/entity/ghost/ghost death.png" type="Texture" id=4]
[ext_resource path="res://assets/entity/ghost/ghost idle.png" type="Texture" id=5]
[ext_resource path="res://assets/entity/ghost/ghost fly forward.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 5 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 4 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 4 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="SpriteFrames" id=77]
animations = [ {
"frames": [ SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 108 ), SubResource( 109 ), SubResource( 110 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=87]
radius = 25.0
height = 50.0

[node name="ghost" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.75, 1.75 )
frames = SubResource( 77 )
animation = "idle"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 87 )

[node name="RayCastLeft2" type="RayCast2D" parent="."]
position = Vector2( -20, 19 )
enabled = true
cast_to = Vector2( -30, -0.006 )
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -50, 0 )
enabled = true
cast_to = Vector2( 0, 150 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 50, 0 )
enabled = true
cast_to = Vector2( 0, 150 )

[node name="RayCastRight2" type="RayCast2D" parent="."]
position = Vector2( 20, 19 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="health_bar" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, -55 )
scale = Vector2( 2, 1.5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 37 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
